# wordle-assistant

./: .gitignore  pyproject.toml  readme.md
tests/: core_test.py  create_df_test.py
wordle_assistant/: core.py  core_config.py  game_manager.py
wordle_assistant/data/: test_words.csv
wordle_cli/: __main__.py  display.py
