[project]
name = "wordle-assistant"
version = "0.1.0"
description = "An assistant that helps solve wordle puzzles with intelligent suggestions."
authors = [
    {name = "Matt Gidsy"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
